refactor test utils into their own crate

--- a/test_utils/Cargo.toml
+++ b/test_utils/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "rs-hive"
+name = "test_utils"
 version = "0.1.0"
-authors = ["Will"]
+authors = ["Will Greenberg <willg@eff.org>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[dev-dependencies]
-test_utils = { path = "test_utils" }
