add more benchmarks, optimise some hotspots in Hex

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,14 @@ edition = "2018"
 [[bench]]
 name = "sgf_benchmark"
 harness = false
+
+[[bench]]
+name = "hex_benchmark"
+harness = false
+
+[[bench]]
+name = "game_state_benchmark"
+harness = false
+
+[profile.release]
+debug = true
