--- a/roach/Cargo.toml
+++ b/roach/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "0.2", features = ["macros"] }
+warp = "0.2"
+"hive" = { path = "../hive" }
+async-trait = "0.1.42"
