--- a/roach/Cargo.toml
+++ b/roach/Cargo.toml
@@ -11,3 +11,8 @@ tokio = { version = "0.2", features = ["macros"] }
 warp = "0.2"
 "hive" = { path = "../hive" }
 async-trait = "0.1.42"
+serde = {version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
+dotenv = "0.15.0"
+r2d2 = "0.8.9"
