--- a/roach/Cargo.toml
+++ b/roach/Cargo.toml
@@ -16,3 +16,6 @@ serde_json = "1.0"
 diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
 dotenv = "0.15.0"
 r2d2 = "0.8.9"
+sha2 = "0.9.2"
+rand = "0.7.3"
+tokio-diesel = "0.3.0"
