--- a/roach-server/Cargo.toml
+++ b/roach-server/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "roach"
+name = "roach-server"
 version = "0.1.0"
 authors = ["Will Greenberg <willg@eff.org>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 tokio = { version = "0.2", features = ["macros"] }
