--- a/roach-server/Cargo.toml
+++ b/roach-server/Cargo.toml
@@ -18,3 +18,4 @@ sha2 = "0.9.2"
 rand = "0.7.3"
 tokio-diesel = "0.3.0"
 futures = { version = "0.3", default-features = false }
+thiserror = "1.0.22"
