--- a/roach-server/Cargo.toml
+++ b/roach-server/Cargo.toml
@@ -20,3 +20,5 @@ tokio-diesel = "0.3.0"
 futures = { version = "0.3", default-features = false }
 thiserror = "1.0.22"
 handlebars = { version = "3.5.1", features = ["dir_source"] }
+log = "0.4.11"
+pretty_env_logger = "0.4.0"
