fix arg handling

--- a/roach-client/Dockerfile
+++ b/roach-client/Dockerfile
@@ -2,8 +2,8 @@ FROM rust:latest
 
 COPY . /usr/src/roach
 
-WORKDIR /usr/src/roach/hive
-RUN cargo install --path .
+WORKDIR /usr/src/roach
+RUN cargo install --path hive --bin cli-engine
+RUN cargo install --path roach-client
 WORKDIR /usr/src/roach/roach-client
-RUN cargo install --path .
 CMD ["./entrypoint.sh"]
